# OandaRates

./: .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  OandaRates.spec  README.md  config.yaml  minimal_gui.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  set_qt_plugin_path.py  setup.py  test_gui.py
OandaRates/: run_app.py
docs/: code_review_plan.md  code_review_plan_2.md  code_review_plan_3.md  code_review_plan_4.md  remaining_issues.md  revised_todo_list.md  todo_list.md  todo_list2.md  todo_list3.md  todo_list4.md
src/: config.py  main.py  model.py  performance.py  presenter.py  theme.py  view.py
tests/: conftest.py  test_integration.py  test_model.py  test_model_categorization.py  test_model_fetch_save.py  test_oanda_terminal.py  test_presenter.py  test_presenter_display.py  test_view.py  test_view_ui.py
typings/: PyQt6.pyi
